--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 https://www.djangoproject.com/m/releases/1.4/Django-1.4b1.tar.gz
 Fabric==1.4.0
+Markdown==2.1.1
 South==0.7.3
 boto==2.2.2
 certifi==0.0.8
